--- a/Week3/Test_Github.html
+++ b/Week3/Test_Github.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Github</title>
+    <link rel="stylesheet" type="text/css" href="Test_Github.css" />
 </head>
 <body>
-    <header>
-        <h1>Github Test</h1>
-    </header>
-    <main>
-        <p>Dit is een test</p>
-    </main>
-    <footer>
-        <p>Einde</p>
-    </footer>
+    <div>
+        <header>
+            <h1>Github Test</h1>
+        </header>
+        <main>
+            <p>Dit is een test</p>
+        </main>
+        <footer>
+            <p>Einde</p>
+        </footer>
+    </div>
 </body>
 </html>
