--- a/Week2/7_Soundboard.html
+++ b/Week2/7_Soundboard.html
@@ -7,6 +7,29 @@
 </head>
 <body>
     <h1>Soundboard</h1>
-    <article></article>
+    <article>
+        <img class = "foto" src="assets/buzzer.png" alt="buzzer" />
+        <audio controls class="audio">
+            <source src="assets/buzzer.mp3" type="audio/mp3">
+        </audio>
+    </article>
+    <article>
+        <img class = "foto" src="assets/fart.png" alt="fart" />
+        <audio controls class="audio">
+            <source src="assets/fart.mp3" type="audio/mp3">
+        </audio>
+    </article>
+    <article class="bel">
+        <img class = "foto bel" src="assets/doorbell.png" alt="buzzer" />
+        <audio controls class="audio">
+            <source src="assets/doorbell.mp3" type="audio/mp3">
+        </audio>
+    </article>
+    <article>
+        <img class = "foto" src="assets/badumtss.jpg" alt="buzzer" />
+        <audio controls class="audio">
+            <source src="assets/badumtss.mp3" type="audio/mp3">
+        </audio>
+    </article>
 </body>
 </html>
