--- a/Week4/2_Audi.html
+++ b/Week4/2_Audi.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Audi A7 Sportback</title>
+    <link rel="stylesheet" type="text/css" href="2_Audi.css" />
 </head>
 <body>
-$END$
+    <header>
+        <img src="assets/audia7.jpg" alt="Audi A7" class="foto" />
+        <div>
+            
+        </div>
+    </header>
 </body>
 </html>
