--- a/Week4/2_Audi.html
+++ b/Week4/2_Audi.html
@@ -8,9 +8,43 @@
 <body>
     <header>
         <img src="assets/audia7.jpg" alt="Audi A7" class="foto" />
-        <div>
-            
+        <div class="hoofding">
+            <h2>Audi A7 Sportback</h2>
+            <hr color="white" />
+            <p>Kunstzinnige intelligentie. De nieuwe vrijheid.<br />Kom langs voor uw gratis proefrit.</p>
         </div>
     </header>
+    <nav>
+        <h2>MENU</h2>
+        <hr color="white" />
+        <ul>
+            <li><a href="#">Paketten</a></li>
+            <li><a href="#">Motoren</a></li>
+            <li><a href="#">Exterieur</a></li>
+            <li><a href="#"><b>Interieur</b></a></li>
+            <li><a href="#">Uitrusting</a></li>
+            <li><a href="#">Accessoires</a></li>
+            <br />
+            <li><a href="#">Galerij</a></li>
+        </ul>
+    </nav>
+    <article>
+        <h2 class="interieur">Interieur</h2>
+        <hr color="black" />
+        <img src="assets/interior1.png" alt="interieur" class="foto_links" />
+        <section>
+            <h3>Prettig, royaal, ruimtelijk</h3>
+            <p>Wij zijn genereus omgegaan met ruimte. Met nog meer comfort en bewegingsvrijheid achterin,
+            zonder gevolgen voor de kofferbak. Met optionele stoelverwarming voor en achter en vooral:
+            met een exacte en hoogwaardige afwerking die vakmanschap verraadt.</p>
+        </section>
+        <img src="assets/interior2.png" alt="interieur" class="foto_rechts" />
+        <section class="margin">
+            <h3>Toon uw eigen stijl</h3>
+            <p>De optionele, in diverse kleuren instelbare contour- en ambienteverlichting
+            maakt van het interieur een podium voor uw eigen inzichten. Lichtgeleiders accentueren
+            interieurvormen, benadrukken het dashboard en designstructuren.</p>
+        </section>
+    </article>
 </body>
 </html>
