--- a/Week4/4_ULnavigation.html
+++ b/Week4/4_ULnavigation.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>UL navigation bar</title>
+    <link rel="stylesheet" type="text/css" href="4_ULnavigation.css" />
 </head>
 <body>
-
+    <header>
+        <h1>An UL navigation bar</h1>
+        <p>It can be done!</p>
+    </header>
+    <nav>
+        <img src="assets/nav.png" alt="nav" class="navigatie" />
+        <ul class="navigatie">
+            <li class="navigatie"><a href="#">Home</a></li>
+            <li class="navigatie"><a href="#">News</a></li>
+            <li class="navigatie"><a href="#">Contact</a></li>
+            <li class="navigatie"><a href="#">About</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
