Week5 Oefening3 Klaar

--- a/Week2/MijnMuziek.html
+++ b/Week2/MijnMuziek.html
@@ -99,7 +99,7 @@
     <a href="#start" class="back">Terug naar boven</a>
     <br /><br /><br />
     <footer>
-        music info for <a href="profiel.html" class="profiel">Marciano</a>
+        music info for <a href="Profiel.html" class="profiel">Marciano</a>
     </footer>
 </body>
 </html>
