--- a/Week5/2_Superheroes.html
+++ b/Week5/2_Superheroes.html
@@ -4,7 +4,7 @@
     <title>Superheroes in New York</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="oefening2_start.css">
+    <link rel="stylesheet" href="2_Superheroes.css">
 </head>
 <body>
 <main>
