Home herhelingsoef Klaar

--- a/Week7/Home.html
+++ b/Week7/Home.html
@@ -8,83 +8,103 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-    <div>
-        <nav>
-            <img class="logo" src="assets/logo.png" />
-            <a href="#">NIEUWS</a>
-            <a href="#">PRODUCTEN</a>
-            <a href="#">CONTACT</a>
-        </nav>
-        <main>
-            <img class="banner" src="assets/banner.jpg" />
-            <h1 class="titel">DE TUIN VAN SAM</h1>
-            <h2>Recent nieuws</h2>
-            <hr />
-            <article class="linkerkant">
-                <p>19 okt 2018 <span class="naam">Sam Agten</span></p>
-                <img src="assets/blog01.jpg" />
-                <section>
-                    <h4>Tuin & Licht Deel 2</h4>
-                    <p>Zuidelijk gelegen? Zicht op het westen? Deel 2 van onze spannende reeks. Hoe maak je optimaal gebruik van de lichtinval in je tuin.</p>
-                </section>
-            </article>
-            <article class="midden">
-                <p>19 okt 2018 <span class="naam">Sam Vanderstraeten</span></p>
-                <img src="assets/blog02.jpg" />
-                <section>
-                    <h4>DIY Fridays</h4>
-                    <p>Het is weer vrijdag! Wil je je tuin een klein beetje extra pit geven? Vandaag gebruikt Sam enkel een elastiekje en een zoutvatje om mooie tuindecoratie te maken.</p>
-                </section>
-            </article>
-            <article class="midden">
-                <p>19 okt 2018 <span class="naam">Sam van Rijn</span></p>
-                <img src="assets/blog03.jpg" />
-                <section>
-                    <h4>Paddestoelen</h4>
-                    <p>Sam legt uit welke paddestoelen giftig zijn en hoe je ze kan herkennen.</p>
-                </section>
-            </article>
-            <article class="rechterkant">
-                <p>19 okt 2018 <span class="naam">Sam Swinnen</span></p>
-                <img src="assets/blog04.jpg" />
-                <section>
-                    <h4>Tuin & Licht Deel 1</h4>
-                    <p>De start van een nieuwe reeks. Ons team van Sammen leert je in deze 5-delige reeks hoe je optimaal gebruik kan maken van de lichtinval.</p>
-                </section>
-            </article>
-            <article class="linkerkant">
-                <p>19 okt 2018 <span class="naam">Sam Barzan</span></p>
-                <img src="assets/blog05.jpg" />
-                <section>
-                    <h4>Slakkenseizoen</h4>
-                    <p>Last van slakken? 10 handige tipsom slakken te weren uit je tuintje.</p>
-                </section>
-            </article>
-            <article class="midden">
-                <p>19 okt 2018 <span class="naam">Sam Swinnen</span></p>
-                <img src="assets/blog02.jpg" />
-                <section>
-                    <h4>Tuinvrienden</h4>
-                    <p>Dankzij jullie steun zijn we vastberaden om nog meer mensen te informeren over onze liefde voor tuinen. Vanaf volgende maand zullen wij starten met een maandelijkse magazine</p>
-                </section>
-            </article>
-            <article class="midden">
-                <p>19 okt 2018 <span class="naam">Sam van Rijn</span></p>
-                <img src="assets/blog03.jpg" />
-                <section>
-                    <h4>Paddestoelen</h4>
-                    <p>Sam legt uit welke paddestoelen giftig zijn en hoe je ze kan herkennen.</p>
-                </section>
-            </article>
-            <article class="rechterkant">
-                <p>19 okt 2018 <span class="naam">Sam Swinnen</span></p>
-                <img src="assets/blog04.jpg" />
-                <section>
-                    <h4>Tuin & Licht Deel 1</h4>
-                    <p>De start van een nieuwe reeks. Ons team van Sammen leert je in deze 5-delige reeks hoe je optimaal gebruik kan maken van de lichtinval.</p>
-                </section>
-            </article>
-        </main>
+    <nav>
+        <img class="logo" src="assets/logo.png" />
+        <a href="#">NIEUWS</a>
+        <a href="#">PRODUCTEN</a>
+        <a href="#">CONTACT</a>
+    </nav>
+    <div class="pagina">
+        <img class="banner" src="assets/banner.jpg" />
+        <h1 class="titel">DE TUIN VAN SAM</h1>
+        <h2>Recent nieuws</h2>
+        <hr />
+        <article class="linkerkant">
+            <p>19 okt 2018 <span class="naam">Sam Agten</span></p>
+            <img src="assets/blog01.jpg" />
+            <section>
+                <h4>Tuin & Licht Deel 2</h4>
+                <p>Zuidelijk gelegen? Zicht op het westen? Deel 2 van onze spannende reeks. Hoe maak je optimaal gebruik van de lichtinval in je tuin.</p>
+            </section>
+        </article>
+        <article class="linksmidden">
+            <p>19 okt 2018 <span class="naam">Sam Vanderstraeten</span></p>
+            <img src="assets/blog02.jpg" />
+            <section>
+                <h4>DIY Fridays</h4>
+                <p>Het is weer vrijdag! Wil je je tuin een klein beetje extra pit geven? Vandaag gebruikt Sam enkel een elastiekje en een zoutvatje om mooie tuindecoratie te maken.</p>
+            </section>
+        </article>
+        <article class="rechtsmidden">
+            <p>19 okt 2018 <span class="naam">Sam van Rijn</span></p>
+            <img src="assets/blog03.jpg" />
+            <section>
+                <h4>Paddestoelen</h4>
+                <p>Sam legt uit welke paddestoelen giftig zijn en hoe je ze kan herkennen.</p>
+            </section>
+        </article>
+        <article class="rechterkant">
+            <p>19 okt 2018 <span class="naam">Sam Swinnen</span></p>
+            <img src="assets/blog04.jpg" />
+            <section>
+                <h4>Tuin & Licht Deel 1</h4>
+                <p>De start van een nieuwe reeks. Ons team van Sammen leert je in deze 5-delige reeks hoe je optimaal gebruik kan maken van de lichtinval.</p>
+            </section>
+        </article>
+        <article class="linkerkant">
+            <p>19 okt 2018 <span class="naam">Sam Barzan</span></p>
+            <img src="assets/blog05.jpg" />
+            <section>
+                <h4>Slakkenseizoen</h4>
+                <p>Last van slakken? 10 handige tipsom slakken te weren uit je tuintje.</p>
+            </section>
+        </article>
+        <article class="linksmidden">
+            <p>19 okt 2018 <span class="naam">Sam Swinnen</span></p>
+            <img src="assets/blog06.jpg" />
+            <section>
+                <h4>Tuinvrienden</h4>
+                <p>Dankzij jullie steun zijn we vastberaden om nog meer mensen te informeren over onze liefde voor tuinen. Vanaf volgende maand zullen wij starten met een maandelijkse magazine: De Tuinvrienden van Sam en Tuin en Licht.</p>
+            </section>
+        </article>
+        <article class="rechtsmidden">
+            <p>19 okt 2018 <span class="naam">Sam van Rijn</span></p>
+            <img src="assets/blog07.jpg" />
+            <section>
+                <h4>Hoge Bomen</h4>
+                <p>De verkiezingen zijn achter de rug. Sam kijkt vandaag naar de impact daarvan op jouw tuin.</p>
+            </section>
+        </article>
+        <article class="rechterkant">
+            <p>19 okt 2018 <span class="naam">Sam Vanderstraeten</span></p>
+            <img src="assets/blog08.jpg" />
+            <section>
+                <h4>Wandelkriebels</h4>
+                <p>De herfst staat voor de deur. Sam neemt je mee op de 3 mooiste bostochten door de Ardennen.</p>
+            </section>
+        </article>
+        <a class="more" href="#"><div class="more">More...</div></a>
+        <h2>Actiecentrum</h2>
+        <hr />
+        <article class="linkerkant acties">
+            <img src="assets/feature01.jpg" />
+            <a class="actieknop" href="#"><div class="actieknop">Offerte aanvragen</div></a>
+        </article>
+        <article class="linksmidden acties">
+            <img src="assets/feature01.jpg" />
+            <a class="actieknop" href="#"><div class="actieknop">Vraag een cursus aan</div></a>
+        </article>
+        <article class="rechtsmidden acties">
+            <img src="assets/feature01.jpg" />
+            <a class="actieknop" href="#"><div class="actieknop">Privacy & veiligheid</div></a>
+        </article>
+        <article class="rechterkant acties">
+            <img src="assets/feature01.jpg" />
+            <a class="actieknop" href="#"><div class="actieknop">Jobs</div></a>
+        </article>
     </div>
+    <footer>
+        <p>Copyright PXL 2018</p>
+    </footer>
 </body>
 </html>
