--- a/Week7/Home.html
+++ b/Week7/Home.html
@@ -10,9 +10,9 @@
 <body>
     <nav>
         <img class="logo" src="assets/logo.png" />
-        <a href="#">NIEUWS</a>
-        <a href="#">PRODUCTEN</a>
-        <a href="#">CONTACT</a>
+        <a href="Home.html">NIEUWS</a>
+        <a href="Producten.html">PRODUCTEN</a>
+        <a href="Contact.html">CONTACT</a>
     </nav>
     <div class="pagina">
         <img class="banner" src="assets/banner.jpg" />
